--- a/src/views/smart-park/style.scss
+++ b/src/views/smart-park/style.scss
@@ -1,8 +1,8 @@
-.smart-parking {
+.smart-park {
   width: 100%;
   height: 100%;
 
-  .arrow {
+  &__arrow {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -13,21 +13,22 @@
     }
   }
 
-  .smart-parking-common-card-container {
+  &__sidebar {
     width: 380px;
     height: 650px;
-    background: url('@/assets/images/smart-parking/bg/bg-side.png') no-repeat center;
+    background: url('@/assets/images/smart-park/bg/bg-side.png') no-repeat center;
     background-size: cover;
     transition: transform 0.8s;
     transform-style: preserve-3d;
 
-    .smart-parking-common-title {
+    .smart-park__sidebar-title {
       width: 218px;
       height: 59px;
-      background: url('@/assets/images/smart-parking/bg/bg-road-condition.png') no-repeat center;
+      background: url('@/assets/images/smart-park/bg/bg-road-condition.png') no-repeat center;
       background-size: cover;
 
       h1 {
+        color: #fff;
         font-size: 18px;
       }
     }
