refactor: 主页等内容优化

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,9 +1,8 @@
 @use "animations/animations";
 @use "common/common";
-@use "views/views";
 
 :root {
-  --colot-primary: #027AFF;
+  --color-primary: #027AFF;
   --color-primary-secondary: #00FFFF;
   --color-info: #7CC1FF;
   --color-info-secondary: #707070;
