feat: 左侧拼图完成;修改部分代码格式

--- a/src/views/business-supervision/style.scss
+++ b/src/views/business-supervision/style.scss
@@ -46,7 +46,7 @@
 
     &-title-describe {
       font-size: 12px;
-      color: var(--color-info-secondary);
+      color: var(--color-info-secondary-1);
     }
   }
 
