--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,8 +4,10 @@
 :root {
   --color-primary: #027AFF;
   --color-primary-secondary: #00FFFF;
+  --color-primary-secondary-1: rgba(0, 255, 255, 0.71);
   --color-info: #7CC1FF;
   --color-info-secondary: #707070;
+  --color-info-secondary-1: #ADCBFF;
   --color-hover: #1C8ADF;
   --color-warning: #FFBE44;
   --color-warning-secondary: #FEDB65;
