feat: 搭建大数据基础

--- a/src/views/big-data/style.scss
+++ b/src/views/big-data/style.scss
@@ -1,6 +1,6 @@
 @use "@/assets/styles/common/src/sidebar" as  *;
 
-.business-supervision {
+.big-data {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,8 +11,7 @@
   @include sidebar-1();
 
   &__content {
-    width: 759px;
+    width: 748px;
     height: 100%;
   }
 }
-
