feat: 大数据左侧顶部完成

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -5,6 +5,7 @@
   --color-primary: #027AFF;
   --color-primary-secondary: #00FFFF;
   --color-primary-secondary-1: rgba(0, 255, 255, 0.71);
+  --color-success: #44D7B6;
   --color-info: #7CC1FF;
   --color-info-secondary: #707070;
   --color-info-secondary-1: #ADCBFF;
