--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,7 +4,7 @@
 :root {
   --color-primary: #027AFF;
   --color-primary-secondary: #00FFFF;
-  --color-primary-secondary-1: rgba(0, 255, 255, 0.71);
+  --color-primary-secondary-1: #00FFFFB5;
   --color-success: #44D7B6;
   --color-info: #7CC1FF;
   --color-info-secondary: #707070;
