--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -3,6 +3,7 @@
 
 :root {
   --color-primary: #027AFF;
+  --color-primary-1: #4F94E6;
   --color-primary-secondary: #00FFFF;
   --color-primary-secondary-1: #00FFFFB5;
   --color-success: #44D7B6;
